# Academic

./: LISEZ_MOI.txt  README.md  pyproject.toml  requirements.txt
Academic_Weapon/: about.py  accueil.py  app.jks  cb1jeag7BM.cpp  communaute.py  doc_viewer.py  feed.py  flash_cards.py  main.py  markdown_editor.py  outils.py  pomodoro.py  pyproject.toml  requirements.txt  text_note.py
Academic_Weapon/assets/user_data/: user_log.txt
Academic_Weapon/document/: fic.txt  new_doc1.txt  test.txt
Academic_Weapon/src/: about.py  accueil.py  communaute.py  feed.py  librairie.py  main.py  outils.py
Academic_Weapon/src/assets/user_data/: agenda.json  flash_card.csv  liked.csv  to_do.csv  user_log.txt
Academic_Weapon/src/document/: conflit.md  page_rank_algo.md  ssss.md  temp.md
Academic_Weapon/src/tool_fold/: calendar.py  doc.py  file_manager.py  flash_cards.py  markdown_editor.py  note.py  pomodoro.py  routes.py  simple_editeur.py  test.py  todo.py
Academic_Weapon/tool_fold/: doc.py  file_manager.py  flash_cards.py  markdown_editor.py  pomodoro.py  routes.py  simple_editeur.py  todo.py
src/: about.py  accueil.py  communaute.py  feed.py  librairie.py  main.py  outils.py
src/assets/user_data/: .enc  agenda.json  liked.csv  to_do.csv  user_log.txt
src/document/: bienvenue.md
src/pyarmor_runtime_000000/: __init__.py
src/tool_fold/: calendar.py  file_manager.py  flash_cards.py  markdown_editor.py  pomodoro.py  routes.py  temp_old_transformer.py  todo.py  transform_stream.py
