[project]
name = "Academic Weapon"
version = "0.1.1"
description = "L'app qui vous faut pour réaliser votre academic comeback!"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Komodo"}
]
dependencies = [
  "flet==0.25.2",
  "mysql-connector-python==9.1.0",
  "huggingface_hub==0.27.0",
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.aw"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Academic Weapon"

# company name to display in about app dialogs
company = "Komodo"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by Komodo"

[tool.flet.app]
path = "src"

[tool.flet.flutter.pubspec.dependency_overrides]
file_picker = "8.1.6"

[tool.flet.android.permission]
"android.permission.MANAGE_EXTERNAL_STORAGE" = true
"android.permission.STORAGE" = true
